[package]
name = "lisp-rs"
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://vishpat.github.io/lisp-rs"
repository = "https://github.com/vishpat/lisp-rs"
documentation = "https://vishpat.github.io/lisp-rs"
description = """
Lisp interpreter in Rust
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linefeed = "0.6.0"
