[package]
name = "lisp-rs"
version = "0.2.3"
edition = "2021"
license = "MIT"
homepage = "https://vishpat.github.io/lisp-rs"
repository = "https://github.com/vishpat/lisp-rs"
documentation = "https://vishpat.github.io/lisp-rs"
description = """
Lisp interpreter in Rust
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.49"